--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "bugs": {
     "url": "https://github.com/uyu423/nodejs-xlsx-analize/issues"
   },
-  "homepage": "https://github.com/uyu423/nodejs-xlsx-analize#readme"
+  "homepage": "https://github.com/uyu423/nodejs-xlsx-analize#readme",
+  "dependencies": {
+    "express": "^4.14.0",
+    "react": "^15.3.2",
+    "react-bootstrap": "^0.30.3"
+  }
 }
