--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
     "dotenv": "^2.0.0",
+    "excel-parser": "^0.2.2",
     "express": "^4.14.0",
     "express-validator": "^2.20.10",
+    "fs": "0.0.1-security",
     "morgan": "^1.7.0",
+    "multer": "^1.2.0",
+    "node-qsb": "0.0.3-1",
     "path": "^0.12.7",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
