--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
     "dotenv": "^2.0.0",
-    "excel-parser": "^0.2.2",
     "express": "^4.14.0",
     "express-validator": "^2.20.10",
     "fs": "0.0.1-security",
@@ -37,7 +36,8 @@
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.2",
     "webpack-dev-server": "^1.16.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack-hot-middleware": "^2.12.2",
+    "xlsx": "^0.8.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
