--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
+    "colors": "^1.1.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-validator": "^2.20.10",
     "fs": "0.0.1-security",
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
+    "mysql": "^2.11.1",
     "node-qsb": "0.0.3-1",
     "path": "^0.12.7",
     "react": "^15.3.2",
