--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/uyu423/nodejs-xlsx-analize#readme",
   "dependencies": {
+    "axios": "^0.14.0",
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
     "colors": "^1.1.2",
@@ -30,11 +31,17 @@
     "node-qsb": "0.0.3-1",
     "path": "^0.12.7",
     "react": "^15.3.2",
+    "react-addons-update": "^15.3.2",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.2",
+    "react-dropzone": "^3.6.0",
     "react-fontawesome": "^1.2.0",
+    "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-bootstrap": "^0.23.1",
+    "reducers": "^3.0.0-alpha",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.2",
     "webpack-dev-server": "^1.16.1",
