--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.14.0",
     "express-validator": "^2.20.10",
     "fs": "0.0.1-security",
+    "moment": "^2.15.1",
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
     "mysql": "^2.11.1",
@@ -36,6 +37,7 @@
     "react-dom": "^15.3.2",
     "react-dropzone": "^3.6.0",
     "react-fontawesome": "^1.2.0",
+    "react-loading": "0.0.9",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-bootstrap": "^0.23.1",
