뭔가 많은 것들을 바꿨다. 모달 사용은 실패했다.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "git+https://github.com/uyu423/nodejs-xlsx-analize.git"
   },
   "author": "Yowu",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/uyu423/nodejs-xlsx-analize/issues"
   },
