--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "development": "cross-env NODE_ENV=development nodemon --exec babel-node --presets=es2015 ./server/app.js --watch server"
+    "development": "cross-env NODE_ENV=development nodemon --exec babel-node --presets=es2015 ./server/app.js --watch server",
+    "clean": "rm -rf build public/bundle.js",
+    "build": "babel server --out-dir build --presets=es2015 && webpack",
+    "start": "cross-env NODE_ENV=production node ./build/app.js"
   },
   "repository": {
     "type": "git",
