--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodejs-xlsx-analize",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha",
   "description": "",
   "main": "index.js",
   "scripts": {
